--- a/install/kubernetes/helm/istio/charts/gateways/templates/service.yaml
+++ b/install/kubernetes/helm/istio/charts/gateways/templates/service.yaml
@@ -21,6 +21,12 @@ spec:
 {{- if $spec.loadBalancerIP }}
   loadBalancerIP: "{{ $spec.loadBalancerIP }}"
 {{- end }}
+{{- if $spec.loadBalancerSourceRanges }}
+  loadBalancerSourceRanges:
+  {{- range $val := $spec.loadBalancerSourceRanges }}
+  - {{ $val }}
+  {{- end }}
+{{- end }}
   type: {{ .type }}
 {{- if $spec.externalTrafficPolicy }}
   externalTrafficPolicy: {{ $spec.externalTrafficPolicy }}
